# hwgc-soft

./: .gitignore  .jetskiignore  Cargo.toml  GEMINI.md  README.md  build.rs  dramsim3_output.txt  iter1k.sh  naive_output.txt  rust-toolchain  test.sh  transpose_tabular_output.py
.agents/rules/: basic-rules.md  code-style-guide.md  prose-style.md
.agents/skills/github/: SKILL.md
.agents/skills/journey-docs/: SKILL.md
.agents/skills/jujutsu/: SKILL.md
.agents/skills/rust/: SKILL.md
.github/workflows/: rust.yml
benches/: avrora.rs  biojava.rs  cassandra.rs  eclipse.rs  fop.rs  graphchi.rs  h2o.rs  jme.rs  jython.rs  kafka.rs  luindex.rs  lusearch.rs  pmd.rs  spring.rs  sunflow.rs  tradesoap.rs  xalan.rs  zxing.rs
configs/: DDR4_8Gb_x8_3200.ini
docs/: 20260219_dramsim3_integration_summary.md
docs/journeys/: 20260219_dramsim3_integration_summary.md  20260221_cache_interface_refactor.md  20260223_interconnect_routing.md  20260227_tlb_virtual_memory.md
llm_no_go/: README.md
scripts/: analyze-1.yml  analyze-2.yml  analyze-fast.yml  analyze-isca.yml  analyze-noopt.yml  bench-rsync.sh  bucket.yml  build_for_bench.sh  depth.yml  forwarding.yml  generate_suite_def.py  lifo.yml  pgo-1.yml  pgo-2.yml  pgo.py  runbms-base.yml  runbms.py  runbms.yml  runbms1.yml  scalability.sh  scalability.yml  shape_cache.yml  simulate.py  simulate.yml  trace.yml  utilization.sh  utilization.yml  verify_dramsim3.sh  wp.yml
src/: cli.rs  constants.rs  export.rs  heapdump.proto  heapdump.rs  lib.rs  m5.rs  main.rs  mark.rs  memdump.rs  memif.rs  probes.rs  sanity.rs  tib.rs  util.rs
src/analysis/: depth.rs  mod.rs  stats.rs  utilization.rs  work.rs
src/mark/: distributed_node_objref.rs  edge_objref.rs  edge_slot.rs  mod.rs  node_objref.rs
src/memdump/: heap_dump.rs  linked_list.rs  mod.rs  physical.rs
src/object_model/: bidirectional.rs  header.rs  mod.rs  openjdk.rs
src/paper_analysis/: degrees.py  degrees.rs  edges.rs  mod.rs  shape.rs
src/shim/: dramsim3_wrapper.cc  dramsim3_wrapper.h  mod.rs
src/simulate/: cache.rs  frontier.py  ideal_trace_utilization.rs  memory.rs  mod.rs  nmpgc.rs  tracing.rs
src/simulate/nmpgc/: mod.rs  network.rs  simulate_paper.py  topology.rs  work.rs
src/trace/: bench.rs  distributed_edge_slot.rs  distributed_node_objref.rs  edge_objref.rs  edge_slot.rs  mod.rs  node_objref.rs  par_edge_slot.rs  par_edge_slot2.rs  shape_cache.rs  wp.rs  wp2.rs  wp_edge_slot.rs  wp_edge_slot2.rs  wp_edge_slot3.rs  wp_edge_slot_async.rs  wp_edge_slot_dual.rs  wp_mmtk.rs
src/trace/wp_edge_slot/: mod.rs
src/trace/wp_edge_slot_dual/: mod.rs
src/trace/wp_mmtk/: mod.rs  wp.rs
src/util/: fake_forwarding.rs  side_mark_table.rs  tracer.rs  typed_obj.rs  workers.rs  wp.rs  wp2.rs  wp3.rs
tools/lbr/: .gitignore  Cargo.toml  README.md  lbr.ipynb
tools/lbr/src/: main.rs
wp/: Cargo.toml
wp/src/: lib.rs
ws-deque/: Cargo.toml
ws-deque/src/: lib.rs  stack.rs
