[package]
name = "hwgc_soft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "tools/lbr", "wp", "ws-deque"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "lib"]

[[bin]]
path = "src/main.rs"
name = "hwgc_soft"

[dependencies]
prost = "0.11"
zstd = "0.12"
anyhow = "1.0.75"
libc = "0.2"
lazy_static = "1.4.0"
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.10"
zsim-hooks = "0.1.0"
clap = { version = "4.4.10", features = ["derive"] }
fixedbitset = "0.4.2"
crossbeam = { version = "0.8.4", features = [
    "crossbeam-channel",
    "crossbeam-deque",
] }
polars = { version = "0.37", features = ["diagonal_concat", "parquet"] }
lru = "0.12"
once_cell = "1.19.0"
num_cpus = "1.16.0"
smallvec = "1.13.2"
harness-probe-perf = "0.0.6"
harness = "0.0.7"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
ctor = "=0.2.7"
spin = "0.9.8"
ws-deque = { path = "ws-deque" }

[build-dependencies]
prost-build = { version = "0.11" }
built = { version = "0.7.1", features = ["git2"] }

[features]
default = []
m5 = []
zsim = []
detailed_stats = []
single_thread = []
relaxed_mark = []
forwarding = []
no_space_dispatch = []
atomic_free_farwarding = []
fifo = []
slower_root_scanning = []
deque_bulk_pop = []
deque_fast_fence = ["ws-deque/fast_fence"]
deque_overflow = []

[profile.release]
# lto = true


[[bench]]
name = "avrora"
harness = false

[[bench]]
name = "biojava"
harness = false

[[bench]]
name = "cassandra"
harness = false

[[bench]]
name = "eclipse"
harness = false

[[bench]]
name = "fop"
harness = false

[[bench]]
name = "graphchi"
harness = false

[[bench]]
name = "h2o"
harness = false

[[bench]]
name = "jme"
harness = false

[[bench]]
name = "jython"
harness = false

[[bench]]
name = "kafka"
harness = false

[[bench]]
name = "luindex"
harness = false

[[bench]]
name = "lusearch"
harness = false

[[bench]]
name = "pmd"
harness = false

[[bench]]
name = "spring"
harness = false

[[bench]]
name = "sunflow"
harness = false

[[bench]]
name = "tradesoap"
harness = false

[[bench]]
name = "xalan"
harness = false

[[bench]]
name = "zxing"
harness = false


[package.metadata.harness.profiles.default]
iterations = 1

[package.metadata.harness.profiles.default.builds]
edge_slot = { env = { TRACING_LOOP = "EdgeSlot" } }
# dist_edge_slot = { env = { TRACING_LOOP = "DistributedEdgeSlot" }, features = [
#     "single_thread",
# ] }
wp_edge_slot = { env = { TRACING_LOOP = "WPEdgeSlot" }, features = [
    "single_thread",
] }
wp_edge_slot_relaxed = { env = { TRACING_LOOP = "WPEdgeSlot" }, features = [
    "single_thread",
    "relaxed_mark",
] }
par_edge_slot = { env = { TRACING_LOOP = "ParEdgeSlot" }, features = [] }

[package.metadata.harness.profiles.par]
iterations = 1

[package.metadata.harness.profiles.par.builds]
wp_edge_slot = { env = { TRACING_LOOP = "WPEdgeSlot" } }
wp_edge_slot_relaxed = { env = { TRACING_LOOP = "WPEdgeSlot" }, features = [
    "relaxed_mark",
] }
# dist_edge_slot = { env = { TRACING_LOOP = "DistributedEdgeSlot" } }

[package.metadata.harness.profiles.queue-scalability]
iterations = 1

[package.metadata.harness.profiles.queue-scalability.builds]
cb001 = { env = { TRACING_LOOP = "ParEdgeSlot", THREADS = "1" } }
cb002 = { env = { TRACING_LOOP = "ParEdgeSlot", THREADS = "2" } }
cb004 = { env = { TRACING_LOOP = "ParEdgeSlot", THREADS = "4" } }
cb008 = { env = { TRACING_LOOP = "ParEdgeSlot", THREADS = "8" } }
cb016 = { env = { TRACING_LOOP = "ParEdgeSlot", THREADS = "16" } }
cb032 = { env = { TRACING_LOOP = "ParEdgeSlot", THREADS = "32" } }
cb064 = { env = { TRACING_LOOP = "ParEdgeSlot", THREADS = "64" } }
cb128 = { env = { TRACING_LOOP = "ParEdgeSlot", THREADS = "128" } }

[package.metadata.harness.profiles.queue-scalability2]
iterations = 1

[package.metadata.harness.profiles.queue-scalability2.builds]
# cb001 = { env = { TRACING_LOOP = "ParEdgeSlot2", THREADS = "1" } }
# cb002 = { env = { TRACING_LOOP = "ParEdgeSlot2", THREADS = "2" } }
# t004 = { env = { TRACING_LOOP = "ParEdgeSlot2", THREADS = "4" } }
# t008 = { env = { TRACING_LOOP = "ParEdgeSlot2", THREADS = "8" } }
t016_crossbeam = { env = { TRACING_LOOP = "ParEdgeSlot", THREADS = "16" } }
t016 = { env = { TRACING_LOOP = "ParEdgeSlot2", THREADS = "16" } }
t016_wp = { env = { TRACING_LOOP = "WPEdgeSlot", THREADS = "16" } }
t016_overflow_opt = { env = { TRACING_LOOP = "ParEdgeSlot2", THREADS = "16" }, features = [
    "deque_overflow",
] }

t032_crossbeam = { env = { TRACING_LOOP = "ParEdgeSlot", THREADS = "32" } }
t032 = { env = { TRACING_LOOP = "ParEdgeSlot2", THREADS = "32" } }
t032_wp = { env = { TRACING_LOOP = "WPEdgeSlot", THREADS = "32" } }
t032_overflow_opt = { env = { TRACING_LOOP = "ParEdgeSlot2", THREADS = "32" }, features = [
    "deque_overflow",
] }

t064_crossbeam = { env = { TRACING_LOOP = "ParEdgeSlot", THREADS = "64" } }
t064 = { env = { TRACING_LOOP = "ParEdgeSlot2", THREADS = "64" } }
t064_wp = { env = { TRACING_LOOP = "WPEdgeSlot", THREADS = "64" } }
t064_overflow_opt = { env = { TRACING_LOOP = "ParEdgeSlot2", THREADS = "64" }, features = [
    "deque_overflow",
] }


# t128_crossbeam = { env = { TRACING_LOOP = "ParEdgeSlot", THREADS = "128" } }
# t128_bulk = { env = { TRACING_LOOP = "ParEdgeSlot2", THREADS = "128" }, features = [
#     "deque_bulk_pop",
# ] }
# t128_fast_fence = { env = { TRACING_LOOP = "ParEdgeSlot2", THREADS = "128" }, features = [
#     "deque_fast_fence",
# ] }
# t128_overflow_opt = { env = { TRACING_LOOP = "ParEdgeSlot2", THREADS = "128" }, features = [
#     "deque_overflow",
# ] }
# t128_bulk_overflow_opt = { env = { TRACING_LOOP = "ParEdgeSlot2", THREADS = "128" }, features = [
#     "deque_overflow",
#     "deque_bulk_pop",
# ] }

[package.metadata.harness.profiles.fwd]
iterations = 1

[package.metadata.harness.profiles.fwd.builds]
wp = { env = { TRACING_LOOP = "WPEdgeSlot2" }, features = [
    "forwarding",
    # "single_thread",
] }
wp_s = { env = { TRACING_LOOP = "WPEdgeSlot2" }, features = [
    "forwarding",
    # "single_thread",
    "no_space_dispatch",
] }

[package.metadata.harness.profiles.async]
iterations = 1

[package.metadata.harness.profiles.async.builds]
wp = { env = { TRACING_LOOP = "WPEdgeSlot" } }
wp_async = { env = { TRACING_LOOP = "WPEdgeSlotAsync" } }
# [package.metadata.harness.profiles.fwd.probes]
# harness-probe-perf = { events = "PERF_COUNT_HW_CPU_CYCLES,PERF_COUNT_HW_INSTRUCTIONS,PERF_COUNT_HW_CACHE_L1D:MISS,PERF_COUNT_HW_CACHE_DTLB:MISS" }

[package.metadata.harness.profiles.queue_order]
iterations = 1

[package.metadata.harness.profiles.queue_order.builds]
wp_lifo = { env = { TRACING_LOOP = "WPEdgeSlot" } }
wp_fifo = { env = { TRACING_LOOP = "WPEdgeSlot" }, features = ["fifo"] }
