[package]
name = "hwgc_soft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    ".",
    "tools/lbr"
]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "lib"]

[[bin]]
path = "src/main.rs"
name = "hwgc_soft"

[dependencies]
prost = "0.14"
zstd = "0.13"
anyhow = "1.0.75"
libc = "0.2"
lazy_static = "1.4.0"
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.10"
zsim-hooks = "0.1.0"
clap = { version = "4.5", features = ["derive"] }
fixedbitset = "0.5"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel","crossbeam-deque"] }
polars = { version = "0.50", features = ["lazy", "diagonal_concat", "parquet", "performant"] }
lru = "0.12"
once_cell = "1.19.0"
num_cpus = "1.16.0"
rayon = "1.10.0"
bitfield = "0.19.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
flate2 = "1.1.2"
rand = "0.9.2"
probe = "0.5.1"

[build-dependencies]
prost-build = { version = "0.14" }
built = { version = "0.8", features = ["git2"] }
cmake = "0.1.57"
cc = "1.2.56"
bindgen = { version = "0.72.1", features = ["runtime"] }

[features]
m5 = []
zsim = []
detailed_stats = []
close_page = []
